changed margin top to fix extra space under header and added some code to help custom style the form dropdowns

--- a/app/assets/stylesheets/layout_components/forms.scss
+++ b/app/assets/stylesheets/layout_components/forms.scss
@@ -287,6 +287,9 @@ input[type='text'],
 textarea,
 select{
   margin-bottom: 0;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 select.has-placeholder:nth-child(1){
